--- a/Estudos/ProjetoEmHTML/style.css
+++ b/Estudos/ProjetoEmHTML/style.css
@@ -1,8 +1,53 @@
-#title, .subtitle, .post_title {
-    color: blue;
+body{
+    background-color: lightgrey;
+    font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
+
 }
 
-.pots_title {
-font-size: 16px;
-font-style: italic;
+
+#title, .subtitle, .post_title {
+    color: #404040;
+}
+#title{
+    font-size: larger;
+    text-transform: uppercase;
+}
+
+.a{
+    text-decoration: underline;
+    color: rgb(24, 50, 105);
+}
+
+.post_title {
+    text-align: center;
+    font-size: 16px;
+    font-style:italic;
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.post{
+    background-color: white; 
+    padding: 15px; 
+    border: 3px solid #342626;  
+    margin-bottom: 15px;
+    border-radius: 5%;
+}
+
+.post_content{
+    margin: 0;
+    margin-bottom: 15px;
+    text-align: center;
+}
+.post_img{
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.list{
+    list-style-type: square;
+    padding: 15px;
+
 }
