--- a/Estudos/MenuDeHamburguer + css/Projeto Final/style-intro.css
+++ b/Estudos/MenuDeHamburguer + css/Projeto Final/style-intro.css
@@ -11,7 +11,7 @@ body{
 .header-wrapper {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(-45deg, #8a8a8a, #5c5c5c, #363636, #202020);
+    background: linear-gradient(-45deg, #ebc471, #e0b862, #d3aa4f, #b48f3d);
     background-size: 400%, 400%;
     display: flex;  
     flex-direction: column;
@@ -26,7 +26,7 @@ h1 {
     text-transform: uppercase;
     font-size: 60px;
     font-family: 'raleway';
-    color: #d3aa4f;
+    color: #5c5c5c;
     margin-bottom: 0;
     text-align: center;
 }
@@ -37,6 +37,7 @@ h2 {
     text-transform: inherit ;
     letter-spacing: 4px;
     text-align: center;
+    color: #d3aa4f
 }
 
 h3 {
