--- a/Estudos/IntroduçãoJavaScript/Projeto Contador/assets/css/styles.css
+++ b/Estudos/IntroduçãoJavaScript/Projeto Contador/assets/css/styles.css
@@ -48,7 +48,6 @@ h3 {
     }
 }
 
-
 body {
     margin-top: 0;
     height: 100vh;
@@ -62,6 +61,9 @@ body {
     position: relative;
     animation: backgroundTransitions 8s ease-in-out infinite;
 }
+
+
+
 
 .counter {
     margin-top: 50px;
@@ -80,7 +82,6 @@ body {
     align-items:center;
 }
 
-
 button {
     margin-left: 3px;
     margin-right: 3px;
@@ -94,6 +95,7 @@ button {
     font-weight: 600;
     text-align: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .counter {
